Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignIntegerBoolObj.quorum
class Main
    action Main
        Boolean v
        v:SetValue(true)
        Test(v)
    end

    action Test(integer var)
    end
end
